{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 3,
  "lineage": "a0a944bc-e813-43b9-2a8b-13be3ade42f9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "first_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412307050439:security-group/sg-0f1df824896ff8f45",
            "description": "nice one ",
            "egress": [],
            "id": "sg-0f1df824896ff8f45",
            "ingress": [],
            "name": "first_sg_tls",
            "name_prefix": "",
            "owner_id": "412307050439",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07091056f205be114"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "first_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412307050439:security-group-rule/sgr-072fe2797bb6d9a4c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-072fe2797bb6d9a4c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f1df824896ff8f45",
            "security_group_rule_id": "sgr-072fe2797bb6d9a4c",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.first_sg"
          ]
        }
      ]
    }
  ]
}